# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild.yaml  cloudbuild_pr.yaml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  publish.yml
docker/: Dockerfile
tests/: test_main.py
