[tool.poetry]
name = "py-project-template"
version = "0.1.0"
description = "This is the template of python project"
authors = ["taxintt <nthouse14@gmail.com>"]
license = "MIT"
readme = "README.md"

include = [
  "CHANGES.rst",
  "docs",
  "poetry.lock",
  "tests",
  "tox.ini",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
requests = "^2.27.1"
httpx = "^0.25.1"

[tool.poetry.dev-dependencies]
tox = "^4.0.0"
pre-commit = "^3.0.0"
pytest = "^7.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
